flow and jams in ch . 6 or 7.

--- a/_posts/thesis_chapters/2025-3-6-Gdps.md
+++ b/_posts/thesis_chapters/2025-3-6-Gdps.md
@@ -589,9 +589,10 @@ In the last chapter, I outlined processes facilitating participants in creating 
 
 In addition to issues of aesthetics, home knowledge of game mechanics and dynamics (the M and D of the MDA framework) also contributed to emerging cultural repertoires. As explored in the previous section, Vignette 4 gives several examples of participant feedback on the dynamics of Madiha's game in the level of the challenge experienced by players. Peers shared their experience of what makes a good game to bear in the feedback they shared. Turning to the area game mechanics, In see V1.b Bertie(c) comments on Toby(c)'s game, which has a dominant game experience of timed jumping: *"It’s like parkour in Minecraft but timed. It’s like playing the game Wipeout. Have you ever played Wipeout?"*. Parkour in Minecraft and Wipeout are both game experiences whose main gameplay mechanic is about judging jumps and landing accurately. Bertie makes links to his existing experience of games, making comparisons between Toby's game, commercial games, and his own. In doing so, Bertie is able to show his knowledge and analysis of gameplay patterns. Additionally, the guidance of Dan(p) for Toby(c) explored above in Vignette 7, saw the parent explicitly drawing out the child's home knowledge of games to enable an exploration of a different set of game mechanics. Thus, the tacit knowledge of GDPs of children and adults as game players serves them in knowledge-brokers roles in the process of feeding back and ideation [@wenger_communities_1998].
 
+I  propose that this use of the MDA framework as a way of providing varied learning pathways has potential to aid facilitators to align with existing inclusive pedagogy, a point I explore in more detail in the discussion section.
 
-Thus observations from video data in this study support existing research which highlight the motivating potential of incorporating home interests in games, coding and media projects [@resnick_mothers_2012; @papert_mindstorms:_1980]. They also support findings of other research on the use of funds of knowledge and interest in digital projects as motivating factors and as a way to overcome barriers to alien cultures [@gutierrez_learning_2019-1; @moje2001maestro]. This research also aligns with PBL research that indicates that allowing participants to incorporate home interests can be highly motivating both in initial stages [@swirski_does_2018-1; @penuel_connecting_2022], and to sustain activity and overcome problems in order to share the personalised object created [@barron_interest_2006]. I also propose that this use of the MDA framework as a way of providing varied learning pathways has potential to aid facilitators to align with existing inclusive pedagogy, a point I explore in more detail in the discussion section.
-
+EDIT DOWN OR SAY HOW IT EXTENDS
+Thus observations from video data in this study support existing research which highlight the motivating potential of incorporating home interests in games, coding and media projects [@resnick_mothers_2012; @papert_mindstorms:_1980]. They also support findings of other research on the use of funds of knowledge and interest in digital projects as motivating factors and as a way to overcome barriers to alien cultures [@gutierrez_learning_2019-1; @moje2001maestro]. This research also aligns with PBL research that indicates that allowing participants to incorporate home interests can be highly motivating both in initial stages [@swirski_does_2018-1; @penuel_connecting_2022], and to sustain activity and overcome problems in order to share the personalised object created [@barron_interest_2006].
 
 
 
@@ -669,7 +670,7 @@ The process of playtesting often served as a facilitative medium for a shared la
 
 The playful elements of the revised process with greater playtesting time helped remove system tensions and moreover introduced system congruencies.
 
-
+The domains of programming, game jams and hackathons also use constraints in a similar way [@gabler2005prototype]. Thus, I now explore the tools, process and the community in this study mutually encourage an flexible approach often referred to as _jamming_. As explored in Chapter 2 existing research suggests that Game Jams can be profitably used in education contexts [@aurava_game_2021], although there is no agreement on the characteristics game jam pedagogy, and scant guidance on how to address potentially problematic issues (list these),
 Ed gives a more technical explanation from  involving the naming of the variable _jump speed_.
 
 Other children come and play the game but only for less than a minute before leaving. Towards the end of the playtesting process, as one child leaves, Molly comments "It's so frustrating." This suggests an evolving understanding that her game is frustrating to players rather than pleasantly challenging.
@@ -722,12 +723,22 @@ Illustration 6.x - Diverse mediational strategies and complex object of activity
 
 <!-- NOTE To restructure. -->
 
-Given the complexity of the object being worked on in this research, , it is of value to return to existing research on CGD&Pn terms of goal formation and motivation in a way which invites discussion on how best to conceptualise the flexible design practices were present above data.
-
-SPACE ABOVE - THE SUMMARISE?
-Younger participants in particular developed impressively fluid practice demonstrating extremely rapids shifts between code editing, game testing, authoring assets in online tools and migrating files often while talking with peers. Older participants also showed rapid, responsive creativity. Clive quickly incorporated a boost to player health after a level after being given feedback during playtesting. In exploring sound making software Ed and Mark start a process of tinkering and messing about with the capability of the tools which spurs creativity. The joint jamming created two different soundtracks. This sparks a new proposal to incorporate different soundtracks for different levels. Pairs often adopted a similar spirit of improvisation. For example parent Dan makes a suggestion - "Use paper to design?" - to which Toby replies "I'm just going with it."
+Given the complexity of the object being worked on in this research, and the disparate  sometimes chaotic nature of the emerging activity, [@biffi_chasing_2017-1; @de_freitas_classroom_2012; @cormier2008rhizomatic],  it is of value to return to existing research on CGD&Pn terms of goal formation and motivation in a way which invites discussion on how best to conceptualise the flexible design practices were present above data.
 
 Flow theory in my guiding motivations in terms of participant experience [@perttula_flow_2017]. As a facilitator, my design decisions were often guided by the desire to not detract from participant experience of flow, and thus their coding fluency and engagement in and identification with the overall game-making process.
+
+Chapter 2 also  explored concepts of fluency in varied forms within constructionist research, technological, digital and computation.
+By way of contrast, the guiding principle being self expression and identity formation. However, given the limitations of constructionism as a theoretical framework, this research also reflects these limits.
+
+The limitations here are on detail on how to enact identity formation via specific pedagogical strategies. While Chapter 2. explored the value of pair and peer programming, it also highlighted this area as one needed further development.
+
+As a step towards this development we can identify the characteristics of fluency in the mediational uses of GDPs outlined in this chapter, identifying techniques used to design for those characteristics, and to surface additional socio-cultural concepts useful for an enriched understanding of processes as play.  
+
+
+SPACE ABOVE - THE SUMMARISE?
+Younger participants in particular developed impressively fluid practice demonstrating extremely rapids shifts between code editing, game testing, authoring assets in online tools and migrating files often while talking with peers. Older participants also showed rapid, responsive creativity. Clive quickly incorporated a boost to player health after a level after being given feedback during playtesting. In exploring sound making software Ed and Mark start a process of tinkering and messing about with the capability of the tools which spurs creativity. The joint improvisation created two different soundtracks. This sparks a new proposal to incorporate different soundtracks for different levels. Pairs often adopted a similar spirit of improvisation. For example parent Dan makes a suggestion - "Use paper to design?" - to which Toby replies "I'm just going with it."
+
+
 
 
 MOVE?
@@ -745,12 +756,7 @@ MOVE OR COMPRESS?
 
 <!-- The data of this chapter develops the scope of this line of research with more specific using framed using socio-cultural analysis and concepts. -->
 
-Chapter 2 also explored concepts of fluency in varied forms within constructionist research, technological, digital and computation.
-By way of contrast, the guiding principle being self expression and identity formation. However, given the limitations of constructionism as a theoretical framework, this research also reflects these limits.
 
-The limitations here are on detail on how to enact identity formation via specific pedagogical strategies. While Chapter 2. explored the value of pair and peer programming, it also highlighted this area as one needed further development.
-
-As a step towards this development we can identify the characteristics of fluency in the mediational uses of GDPs outlined in this chapter, identifying techniques used to design for those characteristics, and to surface additional socio-cultural concepts useful for an enriched understanding of processes as play.  
 
 
 
